# m5core2_esp-idf_nesemu

./: README.md  flash.sh  sdkconfig
components/nofrendo/: CMakeLists.txt  bitmap.c  gui.c  log.c  memguard.h  noftypes.h  vid_drv.c
components/nofrendo-esp32/: CMakeLists.txt  Kconfig.projbuild  psxcontroller.c  spi_lcd.c  spi_lcd.h  video_audio.c
components/nofrendo/nes/: nes_ppu.c
main/: CMakeLists.txt  main.c
